# paralite

./: .gitignore  CMakeLists.txt  README.md  local.conf  run_local.sh
cmake/modules/: FindCityHash.cmake  FindEigen.cmake  FindLZ4.cmake  FindProtobuf.cmake
src/: CMakeLists.txt  learner.cc  main.cc
src/bcd/: bcd_updater.h
src/data/: localizer.cc  localizer.h  shared_row_block_container.h
src/lbfgs/: lbfgs_updater.h
src/loss/: ffm_loss.h  fm_loss.h  logit_loss.h  loss.cc
src/reader/: dump.h  reader.h
src/sgd/: ffm_sgd_learner.cc  ffm_sgd_learner.h  ffm_sgd_param.h  ffm_sgd_updater.cc  ffm_sgd_updater.h  fm_sgd_learner.cc  fm_sgd_learner.h  fm_sgd_param.h  fm_sgd_updater.cc  fm_sgd_updater.h  sgd_updater.cc
src/tracker/: dist_tracker.h
testing/: model_train.conf  run_scheduler.sh  run_server.sh  run_worker.sh
